# AI-LegalDocAnalysis

./: .gitignore  start-api.bat
backend/: 0.34.0  __init__.py  container.py  main.py  prompts.py  pyproject.toml  start_api.bat  start_api.py
backend/config/: __init__.py  settings.py
backend/config/files/: development.toml  production.toml  settings.toml
backend/controllers/auth/: __init__.py  auth_controller.py
backend/controllers/blob_storage/: storage_controller.py
backend/controllers/document/: document_controller.py
backend/controllers/project/: __init__.py  project_controller.py
backend/controllers/tenant/: __init__.py  tenant_controller.py
backend/controllers/user/: __init__.py  user_controller.py
backend/controllers/user_group/: user_group_controller.py
backend/dtos/: __init__.py
backend/dtos/auth/: __init__.py  login.py  register.py
backend/dtos/document/: __init__.py  converter.py  create_document.py  get_document.py  update_document.py
backend/dtos/project/: __init__.py  converter.py  create_project.py  get_project.py  update_project.py
backend/dtos/summary/: ClassificationResult.py
backend/dtos/tenant/: __init__.py  converter.py  create_tenant.py  get_tenant.py  update_tenant.py
backend/dtos/user/: __init__.py  auth0_webhook.py  converter.py  create_user.py  get_user.py  update_role.py  update_user.py
backend/dtos/user_group/: __init__.py  converter.py  create_user_group.py  get_user_group.py  update_user_group.py
backend/infrastructure/: README.md
backend/infrastructure/azure/: deploy.ps1  main.bicep  parameters.json
backend/infrastructure/local/: docker-compose.yml  env.example
backend/migrations/central/: alembic.ini  env.py
backend/migrations/tenant/: alembic.ini  run_tenant_migration.py
backend/models/: __init__.py  base.py  file_types.py  roles.py
backend/models/bart-large-mnli/: README.md
backend/models/central/: __init__.py  tenant.py
backend/models/tenant/: __init__.py  document.py  project.py  project_user_group.py  role.py  user.py  user_group.py  user_user_group.py
backend/schemas/: __init__.py  requests.py  response.py
backend/scripts/: README.md  __init__.py  cleanup_tenant.py  dev_setup.py  make_admin.py  onboard_tenant.py  setup_azure.py  setup_azure_storage.py  setup_azurite.py  setup_central_db.py  setup_tenant_storage.py  test_blob_storage.py
backend/services/: service_factory.py
backend/services/auth_service/: __init__.py
backend/services/authentication_service/: __init__.py  api_key_auth.py  auth0_service.py  authentication_interface.py  authentication_service.py  interfaces.py  nextauth_service.py  password_service.py
backend/services/authorization_service/: __init__.py  auth_dependencies.py  authorization_service.py  decorators.py  interfaces.py  jwt_interface.py  jwt_service.py
backend/services/blob_storage_service/: __init__.py  blob_storage_service.py
backend/services/chunking_service/: __init__.py  chunking_service.py  interfaces.py
backend/services/document_classifier_service/: document_classifier_service.py
backend/tests/: test_authorization_service.py  test_blob_storage_service.py  test_config.py  test_container.py  test_document_classifier_service.py  test_document_service.py  test_document_state_machine.py  test_document_summary_service.py  test_document_workflow.py  test_integration_document_processing.py  test_project_service.py  test_user_group_service.py
backend/workflows/: __init__.py  document_state_machine.py  document_workflow.py  temporal_client.py  worker.py
(+205 files in other folders)
