[tool.poetry]
name = "lda-backend"
version = "0.1.0"
description = "Legal Document Analysis Backend"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "."}]

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.2.4"
pydantic = "^2.5.0"
dependency-injector = "^4.41.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
PyJWT = "^2.8.0"
aiohttp = "^3.9.1"
cryptography = "^41.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 