[tool.poetry]
name = "lda-backend"
version = "0.1.0"
description = "Legal Document Analysis Backend"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.2.4"
pydantic = "^2.5.0"
dependency-injector = "^4.41.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
python-multipart = "^0.0.6"
PyJWT = "^2.8.0"
aiohttp = "^3.9.1"
cryptography = "^41.0.7"
azure-identity = "^1.15.0"
azure-storage-blob = "^12.19.0"
aiofiles = "^24.1.0"
pypdf = "^4.0.0"
python-docx = "^1.2.0"
striprtf = "^0.0.29"
openpyxl = "^3.1.5"
csvkit = "^2.1.0"
huggingface-hub = "^0.34.0"
transformers = "^4.36.0"
torch = "^2.1.0"
pinecone-client = "^2.2.4"
temporalio = "^1.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-nextauth-jwt = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2"
pytest-asyncio = "^1.1.0"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore::UserWarning"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 